// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props renders correctly for a basic menu 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
}

a.c3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.c3:hover {
  color: unset;
  fill: unset;
}

.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.c3:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.c3:not(:disabled):hover {
  background-color: #f7f7f7;
}

.c3:not(:disabled):focus:active,
.c3:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.c3 .c5 {
  top: 0.15em;
}

.c2 {
  margin: 0.5rem 0;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<nav
  aria-label="Main menu"
  aria-orientation="vertical"
  class="c0 c1"
  role="menu"
>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c4"
      role="menuitem"
    >
      Edit...
    </button>
    <button
      class="c3 c4"
      role="menuitem"
    >
      Share...
    </button>
  </div>
</nav>
`;

exports[`props renders correctly for a horizontal menu 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c12 {
  border-color: currentColor;
  border-style: solid;
  opacity: 0.2;
  margin: 1em 0;
  height: 0;
  border-width: 1px 0 0 0;
}

.c11 {
  opacity: 1;
  border-color: #e7e9ed;
}

.c5 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
}

a.c5 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.c5:hover {
  color: unset;
  fill: unset;
}

.c5[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.c5:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.c5:not(:disabled):hover {
  background-color: #f7f7f7;
}

.c5:not(:disabled):focus:active,
.c5:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.c5 .c8 {
  top: 0.15em;
}

.c10 {
  margin: 0;
  width: 100%;
}

.c7 {
  margin-right: 0.5rem;
}

.c3 {
  margin: 0.5rem 0;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 .c4 {
  width: unset;
}

<nav
  aria-label="Main menu"
  aria-orientation="horizontal"
  class="c0 c1"
  role="menu"
>
  <div
    class="c2 c3 c1"
  >
    <button
      class="c4 c5 c6"
      role="menuitem"
    >
      <svg
        aria-hidden="true"
        class="c7 c8 c9 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      Edit...
    </button>
    <button
      class="c4 c5 c6"
      role="menuitem"
    >
      <svg
        aria-hidden="true"
        class="c7 c8 c9 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      Share...
    </button>
  </div>
  <hr
    class="c10 c11 c12 c1"
    role="separator"
  />
  <div
    class="c2 c3 c1"
  >
    <button
      class="c4 c5 c6"
      role="menuitem"
    >
      Go to google
    </button>
  </div>
</nav>
`;

exports[`props renders correctly for a menu popover 1`] = `
.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c15 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c15:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c16 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
  color: #c9444d !important;
}

.c16:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  display: inline-block;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c2[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c2:hover {
  background-color: #efefef;
}

.c2:hover:active {
  background-color: #e3e3e3;
}

.c7 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 4px 8px 0px rgb(0,0,0,0.1),0px 0px 0px 1px rgb(0,0,0,0.1);
}

.c5 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c5[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c19 {
  border-color: currentColor;
  border-style: solid;
  opacity: 0.2;
  margin: 1em 0;
  height: 0;
  border-width: 1px 0 0 0;
}

.c20 {
  color: #444bc9;
  fill: #444bc9;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

.c20:hover {
  color: #03040b;
  fill: #03040b;
}

.c20 .c22 {
  top: 0.15em;
}

.c18 {
  opacity: 1;
  border-color: #e7e9ed;
}

.c14 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
}

a.c14 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.c14:hover {
  color: unset;
  fill: unset;
}

.c14[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.c14:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.c14:not(:disabled):hover {
  background-color: #f7f7f7;
}

.c14:not(:disabled):focus:active,
.c14:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.c14 .c22 {
  top: 0.15em;
}

.c17 {
  margin: 0;
  width: 100%;
}

.c11 {
  margin: 0.5rem 0;
  width: 100%;
}

.c12 {
  color: #60819f;
  font-size: 0.75rem;
  font-weight: 600;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  padding: 0.5rem 1rem;
  padding-top: 0.25rem;
  text-transform: uppercase;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c21 .c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c21 .c13 {
  width: unset;
}

.c4 {
  position: absolute;
  top: 0;
  left: 0;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  cursor: auto;
  z-index: 999;
  display: block;
}

<div
  class="c0 c1"
>
  <button
    aria-haspopup="menu"
    class="c2 c3 "
    kind="default"
    type="button"
  >
    Toggle menu
  </button>
  <div
    aria-hidden="true"
    class="c4 c5 c6 c7"
    data-placement="bottom-start"
    elevation="200"
    hidden=""
    id="popover0"
    role="group"
    style="elevation: 200; padding: 0px; width: 200px;"
    width="200px"
  >
    <nav
      aria-label="Main menu"
      aria-orientation="vertical"
      class="c8 c9"
      role="menu"
    >
      <div
        class="c10 c11 c9"
      >
        <div
          class="c12 c9"
        >
          Actions
        </div>
        <button
          class="c13 c14 c15"
          role="menuitem"
        >
          Edit...
        </button>
        <button
          class="c13 c14 c15"
          role="menuitem"
        >
          Share...
        </button>
        <button
          class="c13 c14 c15"
          role="menuitem"
        >
          Rename...
        </button>
        <button
          class="c13 c14 c16"
          color="danger"
          role="menuitem"
        >
          Delete...
        </button>
      </div>
      <hr
        class="c17 c18 c19 c9"
        role="separator"
      />
      <div
        class="c10 c11 c9"
      >
        <div
          class="c12 c9"
        >
          Links
        </div>
        <a
          class="c13 c14 c15 c20 "
          href="https://google.com"
          role="menuitem"
        >
          Go to Google
        </a>
      </div>
    </nav>
  </div>
</div>
`;

exports[`props renders correctly for a menu with a disabled item 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
}

a.c3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.c3:hover {
  color: unset;
  fill: unset;
}

.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.c3:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.c3:not(:disabled):hover {
  background-color: #f7f7f7;
}

.c3:not(:disabled):focus:active,
.c3:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.c3 .c6 {
  top: 0.15em;
}

.c5 {
  margin-right: 0.5rem;
}

.c2 {
  margin: 0.5rem 0;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<nav
  aria-label="Main menu"
  aria-orientation="vertical"
  class="c0 c1"
  role="menu"
>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c4"
      disabled=""
      role="menuitem"
    >
      <svg
        aria-hidden="true"
        class="c5 c6 c7 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      Edit...
    </button>
    <button
      class="c3 c4"
      role="menuitem"
    >
      <svg
        aria-hidden="true"
        class="c5 c6 c7 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      Share...
    </button>
  </div>
</nav>
`;

exports[`props renders correctly for a menu with a divider 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c10 {
  border-color: currentColor;
  border-style: solid;
  opacity: 0.2;
  margin: 1em 0;
  height: 0;
  border-width: 1px 0 0 0;
}

.c9 {
  opacity: 1;
  border-color: #e7e9ed;
}

.c3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
}

a.c3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.c3:hover {
  color: unset;
  fill: unset;
}

.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.c3:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.c3:not(:disabled):hover {
  background-color: #f7f7f7;
}

.c3:not(:disabled):focus:active,
.c3:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.c3 .c6 {
  top: 0.15em;
}

.c8 {
  margin: 0;
  width: 100%;
}

.c5 {
  margin-right: 0.5rem;
}

.c2 {
  margin: 0.5rem 0;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<nav
  aria-label="Main menu"
  aria-orientation="vertical"
  class="c0 c1"
  role="menu"
>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c4"
      role="menuitem"
    >
      <svg
        aria-hidden="true"
        class="c5 c6 c7 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      Edit...
    </button>
    <button
      class="c3 c4"
      role="menuitem"
    >
      <svg
        aria-hidden="true"
        class="c5 c6 c7 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      Share...
    </button>
  </div>
  <hr
    class="c8 c9 c10 c1"
    role="separator"
  />
  <div
    class="c2 c1"
  >
    <button
      class="c3 c4"
      role="menuitem"
    >
      Go to google
    </button>
  </div>
</nav>
`;

exports[`props renders correctly for a menu with icons 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
}

a.c3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.c3:hover {
  color: unset;
  fill: unset;
}

.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.c3:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.c3:not(:disabled):hover {
  background-color: #f7f7f7;
}

.c3:not(:disabled):focus:active,
.c3:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.c3 .c6 {
  top: 0.15em;
}

.c5 {
  margin-right: 0.5rem;
}

.c2 {
  margin: 0.5rem 0;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<nav
  aria-label="Main menu"
  aria-orientation="vertical"
  class="c0 c1"
  role="menu"
>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c4"
      role="menuitem"
    >
      <svg
        aria-hidden="true"
        class="c5 c6 c7 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      Edit...
    </button>
    <button
      class="c3 c4"
      role="menuitem"
    >
      <svg
        aria-hidden="true"
        class="c5 c6 c7 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      Share...
    </button>
  </div>
</nav>
`;

exports[`props renders correctly for a menu with two groups 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c3 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
}

a.c3 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.c3:hover {
  color: unset;
  fill: unset;
}

.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.c3:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.c3:not(:disabled):hover {
  background-color: #f7f7f7;
}

.c3:not(:disabled):focus:active,
.c3:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.c3 .c6 {
  top: 0.15em;
}

.c5 {
  margin-right: 0.5rem;
}

.c2 {
  margin: 0.5rem 0;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<nav
  aria-label="Main menu"
  aria-orientation="vertical"
  class="c0 c1"
  role="menu"
>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c4"
      role="menuitem"
    >
      <svg
        aria-hidden="true"
        class="c5 c6 c7 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      Edit...
    </button>
    <button
      class="c3 c4"
      role="menuitem"
    >
      <svg
        aria-hidden="true"
        class="c5 c6 c7 c1"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      Share...
    </button>
  </div>
  <div
    class="c2 c1"
  >
    <button
      class="c3 c4"
      role="menuitem"
    >
      Go to google
    </button>
  </div>
</nav>
`;
